--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,14 @@
 apply plugin: 'java'
-apply plugin: 'application'
+apply plugin: 'maven'
 
-mainClassName = 'email.com.gmail.ttsai0509.escpos.EscPosBuilder'
+group = 'com.github.JeremyHe-cn'
+
 sourceCompatibility = 1.8
-version = '1.2'
-
-// Package jar with dependencies
-task fatJar(type: Jar) {
-    manifest {
-        attributes 'Main-Class': 'email.com.gmail.ttsai0509.escpos.EscPosBuilder'
-    }
-    baseName = project.name
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
-}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile 'com.fazecast:jSerialComm:1.3.11'
+//    compile 'com.fazecast:jSerialComm:1.3.11'
 }
